# python-extension-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: build.yml  cd.yml  ci.yml  pypi_publish.yml  release.yml  test.yml  wheels.yml
src/my-cpp-project/: my_cpp_project.cpp  my_cpp_project.hpp
src/myproject/: __init__.py  myproject.cpp  myproject.hpp
src/python/: api.cpp
tests/: test_basic.py  test_my_cpp_project.cpp  test_myproject.cpp
wheelhouse/: myproject-0.0.1-cp310-cp310-macosx_10_9_x86_64.whl  myproject-0.0.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  myproject-0.0.1-cp310-cp310-win32.whl  myproject-0.0.1-cp310-cp310-win_amd64.whl  myproject-0.0.1-cp37-cp37m-macosx_10_9_x86_64.whl  myproject-0.0.1-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  myproject-0.0.1-cp37-cp37m-win32.whl  myproject-0.0.1-cp37-cp37m-win_amd64.whl  myproject-0.0.1-cp38-cp38-macosx_10_9_x86_64.whl  myproject-0.0.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  myproject-0.0.1-cp38-cp38-win32.whl  myproject-0.0.1-cp38-cp38-win_amd64.whl  myproject-0.0.1-cp39-cp39-macosx_10_9_x86_64.whl  myproject-0.0.1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  myproject-0.0.1-cp39-cp39-win32.whl  myproject-0.0.1-cp39-cp39-win_amd64.whl  myproject-0.0.1-pp37-pypy37_pp73-macosx_10_9_x86_64.whl  myproject-0.0.1-pp37-pypy37_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  myproject-0.0.1-pp37-pypy37_pp73-win_amd64.whl  myproject-0.0.1-pp38-pypy38_pp73-macosx_10_9_x86_64.whl  myproject-0.0.1-pp38-pypy38_pp73-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  myproject-0.0.1-pp38-pypy38_pp73-win_amd64.whl
